// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermitSimulation renders component correctly 1`] = `
<div>
  <div
    class="mb-4 pt-1 pr-2 pb-1 pl-2 bg-section rounded-lg"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-wrap gap-2 items-center flex min-w-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving the spender permission to spend this many tokens from your account.
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spending cap
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div
                style="min-width: 0;"
              >
                <div
                  aria-describedby="tippy-tooltip-2"
                  class=""
                  data-original-title="30"
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                    data-testid="simulation-token-value"
                    style="padding-top: 1px; padding-bottom: 1px;"
                  >
                    30
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-column"
            >
              <div
                class="name name__clickable name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xCcCCc...ccccC
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PermitSimulation renders correctly for NFT permit 1`] = `
<div>
  <div
    class="mb-4 pt-1 pr-2 pb-1 pl-2 bg-section rounded-lg"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-wrap gap-2 items-center flex min-w-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving someone else permission to withdraw NFTs from your account.
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Withdraw
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div>
                <p
                  class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                  data-testid="simulation-token-value"
                  style="padding-top: 1px; padding-bottom: 1px;"
                >
                  #3606393
                </p>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-column"
            >
              <div
                class="name name__clickable name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xC3644...1FE88
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
